remove build js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- /build -->
 
   <!-- build:js bundle.min.js -->
-  <script src="bundle.js"></script>
+  <!-- // <script src="bundle.js"></script> -->
   <!-- /build -->
 
 </body>
