--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="beerRun-game" class="game"></div>
 
   <!-- build:remove -->
-  <script src="http://localhost:35729/livereload.js"></script>
+  <!-- // <script src="http://localhost:35729/livereload.js"></script> -->
   <!-- /build -->
 
   <!-- build:js phaser.min.js -->
