--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
   <!-- build:js phaser.min.js -->
   <script src="node_modules/phaser/build/phaser.min.js"></script>
+  
   <!-- /build -->
 
-  <!-- build:js bundle.min.js -->
-  <!-- // <script src="bundle.js"></script> -->
+  <!-- // <script src="./src/main.js"></script> -->
+  <script src="bundle.js"></script>
+
   <!-- /build -->
 
 </body>
