--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div id="beerRun-game" class="game"></div>
+  <div id="beer-run" class="game"></div>
 
   <!-- build:remove -->
   <!-- // <script src="http://localhost:35729/livereload.js"></script> -->
